--- a/tools/meson.build
+++ b/tools/meson.build
@@ -42,6 +42,7 @@ tools_progs = [
 	'intel_stepping',
 	'intel_tiling_detect',
 	'intel_vbt_decode',
+	'intel_vrrtest',
 	'intel_watermark',
 	'intel_gem_info',
 	'intel_gvtg_test',
